2009-06-28  John Abd-El-Malek  <jam@chromium.org>

https://bugs.webkit.org/show_bug.cgi?id=15457

        Layout tests to ensure that "src" paramater is added when it's missing
        but "data" is present.

        * plugins/netscape-plugin-map-data-to-src-expected.txt: Added.
        * plugins/netscape-plugin-map-data-to-src.html: Added.

2009-06-28  John Abd-El-Malek  <jam@chromium.org>

        Reviewed by Eric Seidel.

        https://bugs.webkit.org/show_bug.cgi?id=15457

        Test: plugins/netscape-plugin-map-data-to-src.html

        Fix problems with Real or WMP plugins not displaying because "data" was set
        on the OBJECT tag instead of "src".  This is based on what Firefox does, see
        http://mxr.mozilla.org/mozilla-central/source/layout/generic/nsObjectFrame.cpp#3045

        * rendering/RenderPartObject.cpp:
        (WebCore::mapDataParamToSrc):
        (WebCore::RenderPartObject::updateWidget):

2009-06-28  John Abd-El-Malek  <jam@chromium.org>

        https://bugs.webkit.org/show_bug.cgi?id=15457

        Modify NPAPI test plugin to verify that "src" paramater is added when
        it's missing but "data" is present.

        * DumpRenderTree/TestNetscapePlugIn.subproj/PluginObject.cpp:
        (pluginLog):
        * DumpRenderTree/TestNetscapePlugIn.subproj/PluginObject.h:
        * DumpRenderTree/TestNetscapePlugIn.subproj/main.cpp:
        (NPP_New):
        (NPP_Destroy):
        (NPP_SetWindow):
        (handleEventCarbon):
        (handleEventCocoa):
        * DumpRenderTree/win/TestNetscapePlugin/main.cpp:
        (NPP_New):

Canonical link: https://commits.webkit.org/37010@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@45324 268f45cc-cd09-0410-ab3c-d52691b4dbfc