WebKitTools/DumpRenderTree/TestNetscapePlugIn.subproj/PluginObject.h
@@ -53,3 +53,4 @@ extern NPClass *getPluginClass(void);
 extern void handleCallback(PluginObject* object, const char *url, NPReason reason, void *notifyData);
 extern void notifyStream(PluginObject* object, const char *url, const char *headers);
 extern void testNPRuntime(NPP npp);
+extern void pluginLog(NPP instance, const char* format, ...);
